<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.MainActivity">
    <item
        android:id="@+id/action_novo"
        android:orderInCategory="100"
        android:title="@string/action_novo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="100"
        android:title="@string/action_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_mapa"
        android:orderInCategory="100"
        android:title="@string/action_mapa"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_sync"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_buy"
        android:orderInCategory="100"
        android:title="@string/action_buy"
        app:showAsAction="never" />
</menu>